DynamicWorker with CsvSpecification for generic collection of CSV files