@@ -34,12 +34,6 @@
         </dependency>
 
         <dependency>
-            <groupId>no.ssb.dc.rawdata</groupId>
-            <artifactId>kag-collection</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>no.ssb.rawdata</groupId>
             <artifactId>rawdata-client-provider-gcs</artifactId>
             <version>0.9</version>
@@ -143,6 +137,7 @@
                     <argLine>
                         --enable-preview
                         --illegal-access=deny
+                        --add-opens=java.base/java.lang.invoke=rawdata.collection.api
                         --add-opens=java.base/java.nio=lmdbjava
                         --add-exports=java.base/sun.nio.ch=lmdbjava
                         --add-opens=rawdata.collection.client/no.ssb.dc.collection.client=ALL-UNNAMED
